# isolated-environment

./: .gitignore  README.md  activate.sh  install.py  lint  pyproject.toml  setup.py  test
.github/workflows/: lint.yml  push_macos.yml
src/isolated_environment/: __init__.py  api.py  requirements.py
tests/: run.py  test_aicode.py  test_aider_chat.py  test_cli.py  test_full_isolation.py  test_git.py  test_iso_environment.py  test_requirements.py  test_run_py_file.py  test_whisper.py
tests/test_data/: inner.py
